# SESASR_labs

./: .gitignore  filter.npy  giuseppe_gay.txt  ground_truth.npy  odom.npy  useful_notes.txt
install/: local_setup.sh  setup.sh
src/localization_project/: .gitignore  ok  package.xml  setup.py
src/localization_project/config/: ekf_node.yaml
src/localization_project/launch/: ekf_node.launch.py
src/localization_project/localization_project/: ekf.py  measurement_model.py  motion_models.py  recorder.py  recorder_alt.py  run_ekf.py  run_ekf_2.py  run_localization_odom.py
src/localization_project/localization_project/launch/: ekf_node.launch.py
src/localization_project/rosbags/: instructions
src/localization_project/rosbags/data/: data_0.db3  metadata.yaml
src/localization_project/rosbags/dataaa/: metadata.yaml
src/localization_project/rosbags/recorded_data/: metadata.yaml  recorded_data_0.db3
src/localization_project/stored_data/: comparisons.ipynb  comparisons_omm.ipynb  ekf_saver.py  filter.npy  ground_truth.npy  odom.npy  prova.ipynb
src/localization_project/testing_material/ic0001_lv01_av1/: filter.npy  ground_truth.npy  ic0001_lv01_av01.txt  odom.npy
src/localization_project/testing_material/ic0001_lv01_av1/data/: metadata.yaml
src/localization_project/testing_material/ic0001_lv05_av2/: filter.npy  ground_truth.npy  ic0001_lv05_av2.txt  odom.npy
src/localization_project/testing_material/ic0001_lv05_av2/data/: metadata.yaml
src/localization_project/testing_material/ic0001_lv1_av5/: filter.npy  ground_truth.npy  ic0001_lv2_av5.txt  odom.npy
(+920 files in other folders)
